--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "pg": "^8.13.1",
+    "prisma": "^6.6.0",
     "redis": "^4.7.0",
     "winston": "^3.15.0"
   }
